# dali-cli

./: .gitignore  README.md  pyproject.toml  sourceme
docs/: Makefile  README.md  requirements.txt
docs/source/: cli.rst  conf.py  index.rst
docs/source/api/: index.rst
docs/source/openapi/: openapi.json
src/dalicli/: __init__.py  api.py  cli.py
