[project]
name = "dali-cli"
version = "0.1.0"
description = "CLI for Lunatone DALI IoT controller (devices, control, scan)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31",
  "rich>=13.5",
]

[project.scripts]
dali = "dalicli.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dalicli"]

